--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,36 @@ a.nav-link {
     color: #a7b3c6;
     background-color: #000000;
 }
+.btn2 {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.btn2{background-color: #3f2045;
+    color: #a7b3c6;
+    width: 160px;
+    height: 34px;
+}
+
+.btn2:hover{
+    color: #a7b3c6;
+    background-color: #000000;
+}
 .hero__wrapper {
 	display: flex;
 	align-items: center;
