--- a/styles.css
+++ b/styles.css
@@ -484,7 +484,30 @@ body{
     margin-bottom: 10px;
 }
 
-
+/* PORTFOLIO */ 
+#portfolio
+{
+   
+}
+#portfolio .heading h2
+{
+    color:#fff ;
+}
+#portfolio .img-thumbnail 
+{
+    width: 100%;
+    height: 100%;
+    filter: grayscale(1);
+    -webkit-filter: grayscale(1);
+}
+#portfolio .img-thumbnail:hover
+{
+    filter: grayscale(0);
+    -webkit-filter: grayscale(0);
+}
+.row>* {
+    padding-bottom: 30px;
+}
 /*page projet */
 
 /*page veille tech */
