--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ a.nav-link {
     text-decoration: none;
     color:#a7b3c6;
     position: relative;
-}
+}/*
 .nav-link:hover
 {
     color: #6346a7;
@@ -76,10 +76,17 @@ a.nav-link {
     color: #3f2045;
     transform: scaleX(1);
 }
-
+*/
 .text-uppercase{
     margin-top: 25px;
 }
+
+
+
+/* dropdown */
+
+
+
 
 /* skills */
 
