--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,6 @@ a.nav-link {
     font-size: 30px; 
   }
   
-  #myBtn:hover {
-    /*background-color: #555; */
-  }
-
-
-  
 .carousel.slide{
     height: 50%;
     width: 100%;
@@ -77,15 +71,6 @@ a.nav-link {
     transform: scaleX(1);
 }
 */
-.text-uppercase{
-    margin-top: 25px;
-}
-
-
-
-/* dropdown */
-
-
 
 
 /* skills */
@@ -544,10 +529,39 @@ body{
 
 
 
+/* page projet 1 */
 
 
+.text-uppercase{
+    margin-top: 25px;
+}
+.test35 {
+    display: flex;
+    justify-content: center;
+}
+/* card */
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-gap: 20px;
+    justify-content: center;
+}
 
+.card {
+    display: flex;
+    justify-content: center;
+    grid-template-rows: max-content 200px 1fr;
+    opacity: 1;
+    background-color: rgba(216, 203, 225, 0.3); /* rouge: 119, vert: 119, bleu: 119, alpha: 0.8 */
+    backdrop-filter: blur(5px); /* Ajoute un flou de 5 pixels */
+}
 
+.card img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+    
 
 
 
